[package]
name = "trade-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
rust_decimal = "1.28"
rust_decimal_macros = "1.28"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
uuid = {version = "1.3.1", features = [ "v4", "fast-rng", "macro-diagnostics"]}

